# wechat-capture

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
wechat_capture/: __init__.py  cli.py  database.py  html_render.py  screenshot.py  utils.py
