[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wechat-capture"
version = "0.1.0"
description = "Export WeChat chat history — screenshot mode (zero intrusion) + database mode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyautogui>=0.9.53",
    "Pillow>=9.0",
    "numpy>=1.21",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
database = [
    "zstandard>=0.18",
]

[project.scripts]
wechat-capture = "wechat_capture.cli:main"

[tool.setuptools.packages.find]
include = ["wechat_capture*"]
